upd(build/Equicord): Trying to fix installing depends

--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           cd main-repo/Equicord
           npm i -g pnpm
-          pnpm i
+          pnpm i --no-frozen-lockfile
 
       - name: Update plugin
         run: |
