--- a/.github/workflows/vencord_custom_build.yml
+++ b/.github/workflows/vencord_custom_build.yml
@@ -145,6 +145,13 @@ jobs:
           npm i -g pnpm
           pnpm i
 
+      - name: Vencord - Apply fix CSP for fakeProfile
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.13' 
+      - run: python3 main-repo/src/csp_fix.py
+
       - name: Build artifacts
         shell: bash
         run: |
