Fixing build workflow again

--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -11,6 +11,11 @@ jobs:
     outputs:
       ven_hash: ${{ steps.hash.outputs.hash }}
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+
       - name: Main - Install required tools
         run: |
           sudo apt-get update
@@ -26,10 +31,7 @@ jobs:
           set-safe-directory: false
 
       - name: Equicord - Setup build
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.13' 
-      - run: python3 main-repo/src/equicord_setup.py
+        run: python3 main-repo/src/equicord_setup.py
 
       - name: Update plugin
         run: |
