--- a/.github/workflows/vencord_custom_build.yml
+++ b/.github/workflows/vencord_custom_build.yml
@@ -84,6 +84,10 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.13' 
       - name: Download Vencord artifact
         uses: actions/download-artifact@v4
         with:
@@ -146,9 +150,6 @@ jobs:
           pnpm i
 
       - name: Vencord - Apply fix CSP for fakeProfile
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.13' 
         run: python3 main-repo/src/csp_fix.py
 
       - name: Build artifacts
