feat(build/Vecord): Windows moment
Packages requiring reboot: - visualstudio2022-workload-vctools (exit code 3010) >> Fuck you, Windows.

--- a/.github/workflows/vencord_custom_build.yml
+++ b/.github/workflows/vencord_custom_build.yml
@@ -108,7 +108,7 @@ jobs:
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
             # Cài công cụ build cho Windows
-            choco install -y nsis python3 visualstudio2022-workload-vctools
+            choco install -y nsis python3
             
           elif [ "$RUNNER_OS" == "macOS" ]; then
             # Cài công cụ build cho macOS
