--- a/.github/workflows/vencord_custom_build.yml
+++ b/.github/workflows/vencord_custom_build.yml
@@ -144,7 +144,8 @@ jobs:
               libxrandr-dev \
               ruby-dev \
               build-essential \
-              rpm
+              rpm \
+              libgl-dev
             
             # Cài fpm qua gem
             sudo gem install fpm
@@ -228,13 +229,13 @@ jobs:
             
           elif [ "$RUNNER_OS" == "Linux" ]; then
             # Build GUI cho X11
-            CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -v \
+            CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -v \
               -tags static \
               -ldflags "$LDFLAGS" \
               -o build/VencordInstaller-GUI-X11
             
             # Build GUI cho Wayland
-            CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -v \
+            CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -v \
               -tags "static wayland" \
               -ldflags "$LDFLAGS" \
               -o build/VencordInstaller-GUI-Wayland
@@ -254,7 +255,12 @@ jobs:
           mkdir -p "../Vencord/installers/$RUNNER_OS"
           
           # Copy file build vào thư mục đích
-          cp build/* "../Vencord/installers/$RUNNER_OS/"
+          if [ -n "$(ls -A build/)" ]; then
+            cp build/* "../Vencord/installers/$RUNNER_OS/"
+          else
+            echo "No files found in build directory!"
+            exit 1
+          fi
           
           echo "Installer built for $RUNNER_OS"
 
