--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -16,12 +16,12 @@ jobs:
         with:
           python-version: '3.13'
 
-      - name: Main - Install required tools
+      - name: Install required tools
         run: |
           sudo apt-get update
           sudo apt-get install -y dos2unix rsync
 
-      - name: Main - Checkout main repository
+      - name: Checkout main repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.MY_PAT }}
@@ -30,14 +30,27 @@ jobs:
           submodules: false
           set-safe-directory: false
 
-      - name: Equicord - Setup build
+      - name: Setup Equicord build
         run: python3 main-repo/src/equicord_setup.py
+
+      #- name: Setup Equicord directory
+      #  run: |
+      #    mkdir -p main-repo/Equicord
+      #    git clone --depth 1 --single-branch --branch main https://github.com/Equicord/Equicord.git temp-equicord
+      #    rsync -a --delete --exclude='.git' --exclude='node_modules' temp-equicord/ main-repo/Equicord/
+      #    rm -rf temp-equicord
+      #
+      #- name: Update Equicord from upstream
+      #  run: |
+      #    git clone --depth 1 --single-branch --branch main https://github.com/Equicord/Equicord.git temp-upstream
+      #    rsync -a --delete --exclude='.git' --exclude='node_modules' temp-upstream/ main-repo/Equicord/
+      #    rm -rf temp-upstream
 
       - name: Modify .gitignore for dist and executables
         run: |
           cd main-repo/Equicord
           if [ -f ".gitignore" ]; then
-            sed -i -e '/dist/d' -e '/\.exe/d' -e '/vencord_installer/d' -e '/equicord_installer/d' .gitignore
+            sed -i -e '/dist/d' -e '/\.exe/d' -e '/equicord_installer/d' .gitignore
             echo "# Dist and executable files are intentionally tracked in this fork" >> .gitignore
           else
             echo "No .gitignore file found"
@@ -128,7 +141,7 @@ jobs:
           retention-days: 1
 
   combine-and-commit:
-    needs: [equicord-build]
+    needs: [equicord-setup, equicord-build]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout main repository
